# stm32f4_audio

./: .gitignore  CMakeLists.txt  README.md  STM32F407ZGTx_FLASH.ld  bord_config.h.in  stm32f4x.cfg
Drivers/BSP/: bsp.h
Drivers/BSP/at24c/: at24c.c  at24c.h
Drivers/BSP/audio/: audio.c  audio.h  decoder.c  decoder.h  player.c  player.h
Drivers/BSP/delay/: delay.c
Drivers/BSP/gt911/: gt911.c  gt911.h
Drivers/BSP/lcd/: FONT.c  lcd.c  lcd.h
Drivers/BSP/sdio/: sd_app.c  sd_app.h
Drivers/BSP/sram/: sram_test.c  sram_test.h
Drivers/BSP/wm8978/: wm8978.c  wm8978.h
Middlewares/Fatfs/: diskio.c  ffconf.h  ffsystem.c
Middlewares/USB_APP/Inc/: usbd_conf.h  usbd_msc_app.h
Middlewares/USB_APP/Src/: usbd_conf.c  usbd_msc_app.c  usbd_storage.c
Middlewares/libhelix_mp3/: CMakeLists.txt
Middlewares/libhelix_mp3/real/: buffers.c
Middlewares/lvgl/: lv_conf.h
Middlewares/lvgl/examples/porting/: lv_port_disp.c  lv_port_indev.c
User/: mp3play.txt
User/Inc/: FreeRTOSConfig.h  apps.h  bord_config.h  bord_config.h.txt  main.h  periph.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
User/Src/: apps.c  main.c  periph.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/: gcc-arm-none-eabi.cmake  middlewares.cmake  stm32f407_hal.cmake
